# Emu35-Comfyui-Nodes

./: .gitignore  .gitmodules  README.md  __init__.py  download_nf4.py  nodes.py  nodes_v2.py  patched_tokenization_emu3.py  pyproject.toml  requirements.txt  test_minimal.py
.history/: .gitignore_20251125010917  LICENSE_20251125010917  README_20251122000034.md  README_20251122091828.md  README_20251122095737.md  README_20251122135953.md  README_20251205005359.md  README_20251205005421.md  TROUBLESHOOTING_AND_FIXES_20251122121716.md  check_special_tokens_20251124132038.py  nodes_20251121235732.py  nodes_20251121235814.py  nodes_20251122000938.py  nodes_20251122001425.py  nodes_20251122001433.py  nodes_20251122091846.py  nodes_20251122095657.py  nodes_20251122095737.py  nodes_20251122100821.py  nodes_20251122101345.py  nodes_20251122101359.py  nodes_20251122102023.py  nodes_20251122102643.py  nodes_20251122103950.py  nodes_20251122105303.py  nodes_20251122105957.py  nodes_20251122110427.py  nodes_20251122125603.py  nodes_20251122125637.py  nodes_20251122132837.py  nodes_20251122132846.py  nodes_20251122144057.py  nodes_20251122144952.py  nodes_20251122160926.py  nodes_20251122165629.py  nodes_20251122170715.py  nodes_20251122171039.py  nodes_20251122175430.py  nodes_20251122194526.py  nodes_20251122201129.py  (+88 more)
.history/Emu3_5_repo/src/emu3p5/: modeling_emu3_20251122112355.py  modeling_emu3_20251122114907.py  modeling_emu3_20251122114919.py  modeling_emu3_20251122114927.py  modeling_emu3_20251122114936.py  modeling_emu3_20251122114943.py  modeling_emu3_20251122120506.py  modeling_emu3_20251205015848.py  modeling_emu3_20251205015907.py
.history/Emu3_5_repo/src/tokenizer_emu3_ibq/: tokenization_emu3_20251122143745.py  tokenization_emu3_20251122144712.py  tokenization_emu3_20251122160841.py  tokenization_emu3_20251122160901.py  tokenization_emu3_20251122184124.py  tokenization_emu3_20251122215809.py
.history/Emu3_5_repo/src/utils/: generation_utils_20251122132806.py  generation_utils_20251123104208.py
