[project]
name = "emu35-comfyui-nodes"
description = "ComfyUI integration for BAAI's Emu3.5 multimodal models for text-to-image generation and multimodal understanding. (Description by CC)"
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["transformers>=4.45.0", "torch>=2.0.0", "pillow>=10.0.0", "safetensors>=0.4.0", "accelerate>=0.20.0", "bitsandbytes>=0.43.0", "sentencepiece>=0.1.99", "protobuf>=3.20.0", "einops>=0.6.0"]

[project.urls]
Repository = "https://github.com/EricRollei/Emu35-Comfyui-Nodes"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/EricRollei/Emu35-Comfyui-Nodes/wiki"
"Bug Tracker" = "https://github.com/EricRollei/Emu35-Comfyui-Nodes/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "Emu35-Comfyui-Nodes"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

